@@ -97,6 +97,7 @@ TEST_GUI_OBJECTS =  \
 	$(OBJS)\test_gui_point.o \
 	$(OBJS)\test_gui_config.o \
 	$(OBJS)\test_gui_textctrltest.o \
+	$(OBJS)\test_gui_rawbmp.o \
 	$(OBJS)\test_gui_selstoretest.o \
 	$(OBJS)\test_gui_clientsize.o \
 	$(OBJS)\test_gui_setsize.o
@@ -516,6 +517,9 @@ $(OBJS)\test_gui_config.o: ./config/config.cpp
 	$(CXX) -c -o $@ $(TEST_GUI_CXXFLAGS) $(CPPDEPS) $<
 
 $(OBJS)\test_gui_textctrltest.o: ./controls/textctrltest.cpp
+	$(CXX) -c -o $@ $(TEST_GUI_CXXFLAGS) $(CPPDEPS) $<
+
+$(OBJS)\test_gui_rawbmp.o: ./image/rawbmp.cpp
 	$(CXX) -c -o $@ $(TEST_GUI_CXXFLAGS) $(CPPDEPS) $<
 
 $(OBJS)\test_gui_selstoretest.o: ./misc/selstoretest.cpp
