@@ -885,6 +885,9 @@
 				RelativePath=".\geometry\point.cpp"
 			/>
 			<File
+				RelativePath=".\image\rawbmp.cpp"
+			/>
+			<File
 				RelativePath=".\geometry\rect.cpp"
 			/>
 			<File
